Tests (#33)
* serversevice test

* tests for ServerController

* tests for server mapper

* e2e test gameserver

* added test step in pipeline

---------

Co-authored-by: Thomas Klammer <thomasklammer.1993@gmail.com>